[tool.poetry]
name = "cronometer-sync"
version = "0.1.0"
description = "Cronometer to wger daily sync sidecar"
authors = ["yams <devnull@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
requests = "^2.32.3"
python-dateutil = "^2.9.0.post0"
wearipedia = {git = "https://github.com/Stanford-Health/wearipedia", rev = "bf7d7dccd940216d62284191c033f0cc8ea53aca"}
numpy = "<2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
